2009-04-06  Gordon Williams <gordon.williams@collabora.co.uk>

	Fix for NB#109714 (highlight on launcher not disappearing)
	* data/transitions.ini: Refactoring, tweaking of transition times 
	  for glow effect
	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c: Make sure transition values are read
	  from transitions.ini
	* src/launcher/hd-launcher-page.c: Check cursor movement while
	  dragging and deselect icon if it exceeds that value
	* src/launcher/hd-launcher-tile.c
	* src/launcher/hd-launcher-tile.h: Move code for detecting cursor
	  movement into hd-launcher-page, increase size of highlight so
	  it no longer clips
	* src/tidy/tidy-highlight.c: Ensure highlight copes with being bigger 
	  than the texture it uses
	* src/home/hd-render-manager.c: Changing names in transitions.ini and
	  prepare for 3 levels of zoom
	* src/tidy/tidy-blur-group.c: ensure that edge of zoomed area fits
	  the edge of the screen
	* src/tidy/tidy-finger-scroll.c: Stop this grabbing events that we 
	  need for hd-launcher-page
	* src/util/hd-transition.c: Change comment to something more useful

2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* tests/test-large-window-stack.c:
	  New test program to see how hd likes massive window stacking.
	* tests/test-portrait-win.c: Improved.
	* tests/Makefile.am
	* TODO: TODO added

2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Try to restack less.  Fixes doubly set CURRENT_APP_WINDOW
	(ie. is-topmost) after task switching.

	* src/mb/hd-comp-mgr.c:
	  The unused hd_comp_mgr_sync_stacking() got new meaning
	  to schedule a restack when idle.
	* src/mb/hd-comp-mgr.h:
	  Changed the signature of hd_comp_mgr_restack() to be usable
	  as an idle function.
	* src/home/hd-render-manager.h:
	  Corrected STATE_NEED_TASK_NAV() to not include the launcher.
	* src/home/hd-render-manager.c (hd_render_manager_update_blur_state):
	  Use it.
	* src/home/hd-switcher.c (hd_switcher_zoom_in_complete):